packages/compiler/test/errors/temporal-dead-zone/class-read-before-decl/code.js
function f() {
  return C;
  class C {}
}
